"javapackager -singleton" is not working in linux

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 10
    • Affects Version/s: 10
    • Component/s: deploy
    • Environment:

      java version "10-ea" 2018-03-20
      Java(TM) SE Runtime Environment 18.3 (build 10-ea+37)
      Java HotSpot(TM) 64-Bit Server VM 18.3 (build 10-ea+37, mixed mode)

      Ubuntu 17.04

    • b37
    • 10

      Please have a look a look at comment section for steps to reproduce.

        1. singleton.log
          164 kB
          Ramesh Gangadhar
        2. singleton.png
          332 kB
          Ramesh Gangadhar

            Assignee:
            Victor Drozdov (Inactive)
            Reporter:
            Ramesh Gangadhar
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: