8194488: "javapackager -singleton" is not working in linux

Reviewed-by: almatvee